@@ -9,6 +9,14 @@ API CHANGES in matplotlib-0.72
   pylab figure now defaults to num=None, which creates a new figure
   with a guaranteed unique number 
 
+  contour method syntax changed - now it is matlab compatible
+
+    unchanged: contour(Z)
+    old: contour(Z, x=Y, y=Y)
+    new: contour(X, Y, Z)
+
+ see http://matplotlib.sf.net/matplotlib.pylab.html#-contour
+
 API CHANGES in matplotlib-0.71   
 
    Significant numerix namespace changes, introduced to resolve
